<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:shrinkColumns="*"
    android:stretchColumns="2">
    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        <TextView
            android:id="@+id/brandTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/brandTVLabel" />
        <EditText
            android:id="@+id/brandET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:inputType=""
            android:imeOptions="actionNext">
            <requestFocus />
            <!--TODO delete requestFocus if probvs-->
        </EditText>
    </TableRow>
    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        <TextView
            android:id="@+id/modelTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modelTVLabel" />
        <EditText
            android:id="@+id/modelET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:imeOptions="actionNext"/>
    </TableRow>
    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        <TextView
            android:id="@+id/systemRevTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/androidRevTVLabel" />
        <EditText
            android:id="@+id/systemRevET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:imeOptions="actionNext"/>
    </TableRow>
    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        <TextView
            android:id="@+id/websiteTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/websiteTVLabel"
            android:layout_marginBottom="5pt"/>
        <EditText
            android:id="@+id/websiteET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:imeOptions="actionNext"/>
    </TableRow>
    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/websiteButton"
            android:text="@string/websiteButtonLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <Button
            android:id="@+id/cancelButton"
            android:text="@string/cancelButtonLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <Button
            android:id="@+id/saveButton"
            android:text="@string/saveButtonLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </TableRow>
</TableLayout>
<!--<?xml version="1.0" encoding="utf-8"?>-->
<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:orientation="vertical" >-->
    <!---->

    <!--<LinearLayout-->
        <!--android:id="@+id/LinearLayout01"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content" >-->

        <!--<EditText-->
            <!--android:id="@+id/todo_edit_summary"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="1"-->
            <!--android:hint="@string/todo_edit_summary"-->
            <!--android:imeOptions="actionNext" >-->
        <!--</EditText>-->
    <!--</LinearLayout>-->

    <!--<EditText-->
        <!--android:id="@+id/todo_edit_description"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_weight="1"-->
        <!--android:gravity="top"-->
        <!--android:hint="@string/todo_edit_description"-->
        <!--android:imeOptions="actionNext" >-->
    <!--</EditText>-->

    <!--<Button-->
        <!--android:id="@+id/todo_edit_button"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/todo_edit_confirm" >-->
    <!--</Button>-->

<!--</LinearLayout>-->